--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#072147"
+    android:background="#040C51"
     tools:context=".MainActivity">
 
     <androidx.gridlayout.widget.GridLayout
@@ -25,9 +25,9 @@
             android:layout_width="200dp"
             android:layout_height="188dp"
             android:layout_margin="5dp"
-            app:cardBackgroundColor="#8BB8B8"
+            app:cardBackgroundColor="#81A3D3"
             app:layout_column="0"
-            app:layout_row="0" >
+            app:layout_row="0">
 
             <LinearLayout
                 android:id="@+id/join_vlayout"
@@ -61,9 +61,9 @@
             android:layout_width="196dp"
             android:layout_height="185dp"
             android:layout_margin="5dp"
-            app:cardBackgroundColor="#9BB8B1"
+            app:cardBackgroundColor="#7896C1"
             app:layout_column="1"
-            app:layout_row="0" >
+            app:layout_row="0">
 
             <LinearLayout
                 android:id="@+id/addcar_vlayout"
@@ -102,9 +102,9 @@
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            app:cardBackgroundColor="#9FC6BD"
+            app:cardBackgroundColor="#7299D1"
             app:layout_column="0"
-            app:layout_row="1" >
+            app:layout_row="1">
 
             <LinearLayout
                 android:id="@+id/bookcar_vlayout"
@@ -143,10 +143,9 @@
             android:layout_marginEnd="5dp"
             android:layout_marginRight="5dp"
             android:layout_marginBottom="5dp"
-            android:backgroundTintMode="#9BCACA"
-            app:cardBackgroundColor="#9BCACA"
+            app:cardBackgroundColor="#6B91C8"
             app:layout_column="1"
-            app:layout_row="1" >
+            app:layout_row="1">
 
             <LinearLayout
                 android:id="@+id/carrepair_vlayout"
@@ -184,49 +183,64 @@
         android:fontFamily="@font/almendra_sc"
         android:text="@string/car"
         android:textColor="@color/white"
-        android:textSize="96sp"
+        android:textSize="100sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.059"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/for_txt"
-        android:layout_width="155dp"
-        android:layout_height="108dp"
-        android:layout_marginTop="188dp"
-        android:fontFamily="@font/almendra_sc"
-        android:text="@string/fortxt"
-        android:textColor="@color/white"
-        android:textSize="96sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
         android:id="@+id/all_txt"
-        android:layout_width="150dp"
-        android:layout_height="121dp"
-        android:layout_marginTop="44dp"
+        android:layout_width="253dp"
+        android:layout_height="137dp"
+        android:layout_marginTop="268dp"
         android:fontFamily="@font/almendra_sc"
         android:text="@string/all"
         android:textColor="@color/white"
-        android:textSize="96sp"
+        android:textSize="100sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.947"
+        app:layout_constraintHorizontal_bias="0.202"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/carlogo_icon"
-        android:layout_width="182dp"
-        android:layout_height="123dp"
-        android:layout_marginTop="96dp"
+        android:layout_width="157dp"
+        android:layout_height="96dp"
+        android:layout_marginTop="172dp"
         android:contentDescription="icon"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.661"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/car5" />
+        app:srcCompat="@drawable/lease" />
+
+    <TextView
+        android:id="@+id/for_txt2"
+        android:layout_width="65dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="164dp"
+        android:fontFamily="@font/almendra_sc"
+        android:text="@string/fortxt2"
+        android:textColor="@color/white"
+        android:textSize="100sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.855"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/for_txt"
+        android:layout_width="65dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="164dp"
+        android:fontFamily="@font/almendra_sc"
+        android:text="@string/fortxt"
+        android:textColor="@color/white"
+        android:textSize="100sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.421"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
