--- a/app/src/main/res/layout/fragment_car_form.xml
+++ b/app/src/main/res/layout/fragment_car_form.xml
@@ -107,7 +107,7 @@
             android:layout_marginLeft="7dp"
             android:layout_marginTop="10dp"
             app:layout_column="0"
-            app:layout_row="2"
+            app:layout_row="3"
             app:srcCompat="@drawable/calendar" />
 
         <com.google.android.material.textfield.TextInputLayout
@@ -203,6 +203,41 @@
             app:layout_column="1"
             app:layout_row="6" />
 
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="7dp"
+            app:layout_column="0"
+            app:layout_row="2"
+            app:srcCompat="@drawable/driverlicense" />
+
+        <ImageView
+            android:id="@+id/imageView9"
+            android:layout_width="90dp"
+            android:layout_height="wrap_content"
+            app:layout_column="0"
+            app:layout_row="1"
+            app:srcCompat="@drawable/industry" />
+
+        <ImageView
+            android:id="@+id/imageView10"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="14dp"
+            android:layout_marginTop="5dp"
+            app:layout_column="0"
+            app:layout_row="4"
+            app:srcCompat="@drawable/phone" />
+
+        <ImageView
+            android:id="@+id/imageView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="15dp"
+            app:layout_column="0"
+            app:layout_row="5"
+            app:srcCompat="@drawable/map" />
 
 
     </androidx.gridlayout.widget.GridLayout>
