--- a/app/src/main/res/layout/fragment_car_form.xml
+++ b/app/src/main/res/layout/fragment_car_form.xml
@@ -19,7 +19,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_marginTop="20dp"
         android:text="Cars Detailes"
         android:textColor="@color/white"
         android:textSize="28sp" />
@@ -193,12 +192,13 @@
                 android:inputType="text"
                 android:maxLines="2" />
         </com.google.android.material.textfield.TextInputLayout>
+
         <Button
             android:id="@+id/btnsubmit"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_marginLeft="26dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="5dp"
             android:text="@string/submit"
             app:layout_column="1"
             app:layout_row="6" />
@@ -238,6 +238,32 @@
             app:layout_column="0"
             app:layout_row="5"
             app:srcCompat="@drawable/map" />
+
+        <Button
+            android:id="@+id/showbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/show"
+            app:layout_column="0"
+            app:layout_row="7" />
+
+        <Button
+            android:id="@+id/deletbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:text="@string/Delete"
+            app:layout_column="1"
+            app:layout_row="7" />
+
+        <Button
+            android:id="@+id/editbtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="170dp"
+            android:text="@string/Edit"
+            app:layout_column="1"
+            app:layout_row="7" />
 
 
     </androidx.gridlayout.widget.GridLayout>
